# L4D2ModAssistant

./: .gitattributes  .gitignore  Agents.md  CMakeLists.txt  README.md  vcpkg.json
app/: main.cpp
app/services/: ApplicationInitializer.cpp  ApplicationInitializer.h  GameDirectoryMonitor.cpp  GameDirectoryMonitor.h  ImportService.cpp  ImportService.h
app/ui/: ImportFolderDialog.cpp  ImportFolderDialog.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ModEditorDialog.cpp  ModEditorDialog.h
app/ui/components/: ModFilterPanel.cpp  ModFilterPanel.h  ModTableWidget.cpp  ModTableWidget.h  NavigationBar.cpp  NavigationBar.h
app/ui/pages/: RepositoryPage.cpp  RepositoryPage.h  SelectorPage.cpp  SelectorPage.h  SettingsPage.cpp  SettingsPage.h
app/ui/presenters/: RepositoryPresenter.cpp  RepositoryPresenter.h  SelectorPresenter.cpp  SelectorPresenter.h  SettingsPresenter.cpp  SettingsPresenter.h
app/ui/selector/: RandomizeController.cpp  RandomizeController.h
core/config/: AttributeOptions.cpp  AttributeOptions.h  Settings.cpp  Settings.h
core/db/: Db.cpp  Db.h  Migrations.h  Stmt.h
core/log/: Log.cpp  Log.h
core/random/: Randomizer.cpp  Randomizer.h
core/repo/: CategoryDao.cpp  CategoryDao.h  FixedBundleDao.cpp  FixedBundleDao.h  GameModDao.cpp  GameModDao.h  ModRelationDao.cpp  ModRelationDao.h  RepositoryDao.cpp  RepositoryDao.h  RepositoryService.cpp  RepositoryService.h  SavedSchemeDao.cpp  SavedSchemeDao.h  SelectionDao.cpp  SelectionDao.h  TagDao.cpp  TagDao.h
doc/: AGENTS.md  AI开发要求.md  L4D2_MOD_管理器_技术规格_v0.2_修订版.md  极速MVP.md  随机组合策略.md
setting_config/: LMA_settings.json  init_categories.json  init_tags.json  mod_attributes.json
tests/: SavedSchemeTests.cpp
